# SchedulerApplication

./: README.md
Scheduler/: CMakeLists.txt  addtaskspage.cpp  addtaskspage.h  addtaskspage.ui  homepage.cpp  homepage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  updatedatepage.cpp  updatedatepage.h  updatedatepage.ui  updatehome.cpp  updatehome.h  updatehome.ui  updatemessagepage.cpp  updatemessagepage.h  updatestatuspage.cpp  updatestatuspage.h  updatestatuspage.ui  updatetaskspage.cpp  updatetaskspage.h  updatetaskspage.ui  updatetimepage.cpp  updatetimepage.h  updatetimepage.ui  viewallpage.cpp  viewallpage.h  viewdonepage.cpp  viewdonepage.h  viewhome.cpp  viewhome.h  viewhome.ui  viewinprogresspage.cpp  viewinprogresspage.h  viewinprogresspage.ui  viewspecificpage.cpp  viewspecificpage.h  viewtaskspage.cpp  viewtaskspage.h  (+5 more)
SchedulerApplication/: SchedulerApplication.qtvscr  SchedulerApplication.vcxproj  SchedulerApplication.vcxproj.filters  scheduler.db
SchedulerApplication/include/: MyString.h  Scheduler.h  mainwindow.h
SchedulerApplication/src/: Scheduler.cpp  mainwindow.cpp
SchedulerApplication/ui/: addtaskspage.ui  homepage.ui  updatemessagepage.ui  viewallpage.ui  viewdonepage.ui  viewspecificpage.ui  viewtodaypage.ui  viewtodopage.ui
